--- a/index.html
+++ b/index.html
@@ -1,42 +1,136 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Smart Surface Dashboard</title>
-  <link rel="stylesheet" href="/static/style.css">
+  <meta charset="utf-8">
+  <title>Smart Surface & Shape Dashboard</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <style>
+    body{font-family:Arial,system-ui;background:#0b1220;color:#e6f1ff;margin:0}
+    header{padding:18px;text-align:center;background:#071024}
+    .row{display:flex;gap:18px;padding:18px;flex-wrap:wrap;justify-content:center}
+    .card{background:#0f1724;padding:14px;border-radius:10px;min-width:260px;box-shadow:0 6px 18px rgba(0,0,0,0.6)}
+    .big{min-width:520px}
+    h1,h2{margin:6px 0;color:#8ad4ff}
+    .metric{font-size:28px;color:#cde9ff;margin:8px 0}
+    .btn{background:#1fb6ff;color:#012; border:none;padding:10px 14px;border-radius:8px;cursor:pointer;font-weight:700}
+    .btn:active{transform:translateY(1px)}
+    .color-box{width:80px;height:48px;border-radius:6px;border:2px solid #2b8abf;display:inline-block;vertical-align:middle}
+    footer{padding:12px;text-align:center;color:#97bcd9}
+  </style>
 </head>
 <body>
-  <div class="container">
-    <h1>🟢 Smart Surface Dashboard</h1>
+<header><h1>Smart Surface & Shape Detection</h1></header>
 
-    <div class="card">
-      <p><strong>Distance:</strong> <span id="distance">--</span> cm</p>
-      <p><strong>Color:</strong> <span id="color">--</span></p>
-      <p><strong>Shape:</strong> <span id="shape">--</span></p>
-      <p><strong>Ambient Temp:</strong> <span id="ambient">--</span> °C</p>
-      <p><strong>Object Temp:</strong> <span id="object">--</span> °C</p>
-    </div>
-
-    <button id="checkBtn">Check Shape</button>
+<div class="row">
+  <div class="card">
+    <h2>Current Readings</h2>
+    <div>Distance: <div id="distance_text" class="metric">--</div></div>
+    <div>Color: <div id="color_text" class="metric">--</div></div>
+    <div>Temperature: <div id="temp_text" class="metric">--</div></div>
+    <div>Speed of sound: <div id="sound_text" class="metric">--</div></div>
   </div>
 
-  <script>
-    document.getElementById("checkBtn").addEventListener("click", async () => {
-      const btn = document.getElementById("checkBtn");
-      btn.disabled = true;
-      btn.textContent = "Measuring...";
-      const res = await fetch("/measure");
-      const data = await res.json();
+  <div class="card big">
+    <h2>Controls</h2>
+    <div style="display:flex;gap:10px;flex-wrap:wrap">
+      <button class="btn" onclick="measureDistance()">Measure Distance</button>
+      <button class="btn" onclick="measureShape()">Measure Shape (15)</button>
+      <button class="btn" onclick="measureMaterial()">Test Material (20)</button>
+    </div>
+    <div style="margin-top:14px">
+      <canvas id="chart" height="120"></canvas>
+    </div>
+  </div>
 
-      document.getElementById("distance").textContent = data.distance;
-      document.getElementById("color").textContent = data.color;
-      document.getElementById("shape").textContent = data.shape;
-      document.getElementById("ambient").textContent = data.ambient;
-      document.getElementById("object").textContent = data.object;
+  <div class="card">
+    <h2>Color & Light</h2>
+    <div><span id="color_box" class="color-box"></span>
+      <div style="display:inline-block;vertical-align:middle;margin-left:10px">
+        <div id="rgb_text">R: - G: - B: -</div>
+        <div id="lux_text">Lux: -</div>
+      </div>
+    </div>
+  </div>
 
-      btn.disabled = false;
-      btn.textContent = "Check Shape";
-    });
-  </script>
+  <div class="card">
+    <h2>Last Test Result</h2>
+    <div id="last_result" style="font-size:15px;color:#dff">No test yet</div>
+  </div>
+</div>
+
+<footer>Raspberry Pi 5 • Press a button to start each test • OLED + Buzzer will also update</footer>
+
+<script>
+const chartCtx = document.getElementById('chart').getContext('2d');
+const chart = new Chart(chartCtx, {
+  type: 'line',
+  data: { labels: [], datasets: [{ label: 'Distance (cm)', data: [], borderColor: '#62dafb', tension:0.2 }] },
+  options: { scales:{ y:{ beginAtZero:false } }, responsive:true }
+});
+
+async function fetchCurrent(){
+  const res = await fetch('/api/read_current');
+  const j = await res.json();
+  document.getElementById('distance_text').innerText = j.distance_text;
+  document.getElementById('color_text').innerText = j.color_text;
+  document.getElementById('temp_text').innerText = j.temp_text;
+  document.getElementById('sound_text').innerText = j.speed_of_sound_m_s ? j.speed_of_sound_m_s + ' m/s' : '--';
+  // color swatch
+  const r=j.r||0, g=j.g||0, b=j.b||0;
+  document.getElementById('color_box').style.backgroundColor = `rgb(${r},${g},${b})`;
+  document.getElementById('rgb_text').innerText = `R:${r} G:${g} B:${b}`;
+  document.getElementById('lux_text').innerText = `Lux: ${Math.round(j.lux||0)}`;
+}
+
+async function measureDistance(){
+  setLast("Measuring distance...");
+  const res = await fetch('/api/measure_distance');
+  const j = await res.json();
+  setLast("Distance result: " + j.distance_text);
+  // update chart with single value (append)
+  appendChartValue(j.distance_val);
+}
+
+async function measureShape(){
+  setLast("Measuring shape (15 readings)...");
+  const res = await fetch('/api/measure_shape');
+  const j = await res.json();
+  setLast(`Shape: ${j.shape} | avg ${j.average} cm | std ${j.std}`);
+  // display full 15 readings on chart (nulls shown as gaps)
+  setChartSeries(j.readings);
+  // also show on OLED and buzzer already done by backend
+}
+
+async function measureMaterial(){
+  setLast("Measuring material (20 readings)...");
+  const res = await fetch('/api/measure_material');
+  const j = await res.json();
+  setLast(`Material verdict: ${j.verdict} | avg ${j.average} std ${j.std}`);
+  setChartSeries(j.readings);
+}
+
+function setLast(txt){
+  document.getElementById('last_result').innerText = txt;
+}
+
+function appendChartValue(v){
+  if(v===null || v===undefined) return;
+  chart.data.labels.push('');
+  chart.data.datasets[0].data.push(v);
+  if(chart.data.labels.length>30){ chart.data.labels.shift(); chart.data.datasets[0].data.shift(); }
+  chart.update();
+}
+
+function setChartSeries(arr){
+  chart.data.labels = arr.map((_,i)=>i+1);
+  chart.data.datasets[0].data = arr.map(x=> x===null ? null : x);
+  chart.update();
+}
+
+// poll current every 2s for live numbers
+fetchCurrent();
+setInterval(fetchCurrent, 2000);
+</script>
 </body>
 </html>
