--- a/dashboard.html
+++ b/dashboard.html
@@ -1,321 +1,207 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Smart Surface Dashboard</title>
-
-  <!-- Chart.js CDN -->
+  <meta charset="UTF-8">
+  <title>Smart Surface and Shape Detector</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
   <style>
-    :root{
-      --bg:#fffef6;
-      --card:#efff9a; /* pale lime */
-      --accent:#d9ff6f; /* bright */
-      --text-dark:#202020;
-      --muted:#6b6b6b;
-      --accent-dark:#b7d94a;
-      --highlight:#f7a84b;
+    body {
+      font-family: "Segoe UI", sans-serif;
+      background: linear-gradient(to right, #006400, #8B0000);
+      color: white;
+      text-align: center;
+      margin: 0;
+      padding: 0;
     }
-    body{
-      margin:0;
-      font-family: 'Segoe UI', Arial, sans-serif;
-      background: linear-gradient(135deg,#ffd89b30,#fff);
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      height:100vh;
+
+    h1 {
+      background: rgba(0, 0, 0, 0.6);
+      padding: 15px;
+      font-size: 28px;
+      color: yellow;
+      margin: 0;
+      text-shadow: 2px 2px 4px black;
     }
-    .wrap{
-      width:95%;
-      max-width:1100px;
-      background:#ffffff;
-      border-radius:18px;
-      padding:22px;
-      box-shadow: 0 8px 30px rgba(0,0,0,0.12);
-      border: 6px solid #fff;
+
+    .container {
+      margin-top: 30px;
     }
-    .top{
-      display:flex;
-      gap:18px;
-      align-items:center;
-      justify-content:space-between;
-      margin-bottom:16px;
-    }
-    .title{
-      display:flex;
-      gap:12px;
-      align-items:center;
-    }
-    .logo{
-      width:72px;
-      height:72px;
-      background:linear-gradient(180deg,#dff97a,#bfe44a);
-      border-radius:14px;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      font-weight:700;
-      color:#1a1a1a;
-      box-shadow:0 6px 18px rgba(0,0,0,0.06);
-    }
-    .title h1{
-      margin:0;
-      font-size:20px;
-      color:var(--text-dark);
-    }
-    .controls{
-      display:flex;
-      gap:12px;
-      align-items:center;
-    }
-    button{
-      background:linear-gradient(180deg,#f7d36b,#f0c24b);
+
+    .btn {
+      background-color: yellow;
+      color: black;
+      font-size: 20px;
+      font-weight: bold;
       border: none;
-      padding:12px 18px;
-      border-radius:10px;
-      font-weight:700;
-      cursor:pointer;
-      box-shadow:0 6px 14px rgba(0,0,0,0.08);
-      color:#111;
-    }
-    button:disabled{
-      opacity:0.6; cursor:not-allowed;
+      border-radius: 12px;
+      padding: 18px 32px;
+      margin: 15px;
+      cursor: pointer;
+      box-shadow: 3px 3px 10px rgba(0,0,0,0.4);
+      transition: 0.3s;
     }
 
-    .main{
-      display:grid;
-      grid-template-columns: 1fr 1fr;
-      gap:14px;
+    .btn:hover {
+      background-color: gold;
+      transform: scale(1.05);
     }
 
-    .card{
-      background:var(--card);
-      border-radius:12px;
-      padding:16px;
-      min-height:140px;
-      box-shadow: inset 0 -6px 0 rgba(0,0,0,0.02);
-    }
-    .big{
-      display:flex;
-      flex-direction:column;
-      align-items:center;
-      justify-content:center;
-      font-size:36px;
-      font-weight:800;
-      color:var(--text-dark);
-      padding:24px;
+    .results {
+      margin-top: 30px;
+      font-size: 18px;
+      color: #fff;
     }
 
-    .metrics{
-      display:flex;
-      gap:12px;
-      align-items:center;
-      justify-content:space-around;
-      margin-bottom:8px;
-    }
-    .metric{
-      text-align:center;
-    }
-    .metric .v{
-      font-size:24px;
-      font-weight:800;
-      color:#153; /* greenish, but we'll override below */
+    .badge {
+      margin-top: 15px;
+      font-size: 22px;
+      font-weight: bold;
+      padding: 10px 20px;
+      border-radius: 8px;
+      display: inline-block;
     }
 
-    /* small responsive */
-    @media (max-width:820px){
-      .main{ grid-template-columns: 1fr; }
+    #chartContainer {
+      margin: 30px auto;
+      width: 80%;
+      max-width: 700px;
+      background: white;
+      padding: 20px;
+      border-radius: 10px;
+    }
+
+    #readingsChart {
+      background-color: white;
+    }
+
+    #summary {
+      margin-top: 30px;
+      background-color: rgba(0, 0, 0, 0.6);
+      padding: 20px;
+      border-radius: 10px;
+      width: 80%;
+      max-width: 700px;
+      margin-left: auto;
+      margin-right: auto;
+      font-size: 17px;
+      line-height: 1.6;
+      text-align: left;
+      color: #fff;
     }
   </style>
 </head>
 <body>
-  <div class="wrap">
-    <div class="top">
-      <div class="title">
-        <div class="logo">SS</div>
-        <div>
-          <h1>Smart Surface & Shape Detector</h1>
-          <div style="color:var(--muted);font-size:13px">Pi Dashboard</div>
-        </div>
-      </div>
 
-      <div class="controls">
-        <button id="btnDistance" onclick="doMeasure()">Check Distance</button>
-        <button id="btnShape" onclick="doShape()">Check Shape</button>
-      </div>
-    </div>
+  <h1>Smart Surface and Shape Detector</h1>
 
-    <div class="main">
-      <!-- Large distance card -->
-      <div class="card big" id="distanceCard">
-        <div style="font-size:14px;color:#444">Distance Measured</div>
-        <div id="distanceVal">-- cm</div>
-        <div id="tempVal" style="font-size:13px;color:var(--muted);margin-top:8px">Temp: -- °C | Color: --</div>
-      </div>
-
-      <!-- Pie chart & small metrics -->
-      <div class="card">
-        <div style="display:flex;align-items:center;justify-content:space-between;">
-          <strong>Performance</strong>
-          <div style="color:var(--muted);font-size:12px">Color / Shape / Temp</div>
-        </div>
-        <canvas id="pieChart" width="300" height="200"></canvas>
-        <div class="metrics" style="margin-top:6px;">
-          <div class="metric"><div style="font-size:12px;color:var(--muted)">Color Detected</div><div class="v" id="colorVal">--</div></div>
-          <div class="metric"><div style="font-size:12px;color:var(--muted)">Shape Detected</div><div class="v" id="shapeVal">--</div></div>
-          <div class="metric"><div style="font-size:12px;color:var(--muted)">Temperature</div><div class="v" id="tempSmall">--</div></div>
-        </div>
-      </div>
-
-      <!-- Line chart: last 5 readings -->
-      <div class="card">
-        <div style="display:flex;justify-content:space-between;align-items:center;">
-          <strong>Last 5 Distance Variation</strong>
-          <div style="color:var(--muted);font-size:12px">(Shown after Check Shape)</div>
-        </div>
-        <canvas id="lineChart" width="400" height="200"></canvas>
-      </div>
-
-      <!-- Extra info / status -->
-      <div class="card">
-        <div style="display:flex;flex-direction:column;gap:8px;">
-          <div><strong>Status</strong></div>
-          <div id="status" style="color:var(--muted)">Ready</div>
-          <div style="margin-top:6px;"><small style="color:var(--muted)">Press "Check Distance" to get a single reading. Press "Check Shape" to take 5 readings and analyze shape (line chart will appear).</small></div>
-        </div>
-      </div>
-    </div>
+  <div class="container">
+    <button class="btn" onclick="measureDistance()">Measure Distance</button>
+    <button class="btn" onclick="checkShape()">Check Shape</button>
+    <button class="btn" onclick="checkMaterial()">Check Material</button>
   </div>
 
-<script>
-  // Chart variables
-  let pieChart = null;
-  let lineChart = null;
+  <div class="results" id="results">
+    <p><strong>Distance:</strong> <span id="distance">--</span> cm</p>
+    <p><strong>Temperature:</strong> <span id="temp">--</span> °C</p>
+    <p><strong>Speed of Sound:</strong> <span id="speed">--</span> m/s</p>
+    <p><strong>Shape:</strong> <span id="shape">--</span></p>
+    <p><strong>Material:</strong> <span id="material">--</span></p>
+    <p><strong>Std Dev:</strong> <span id="std_dev">--</span></p>
 
-  // Initial empty pie (3 equal slices)
-  const pieCtx = document.getElementById('pieChart').getContext('2d');
-  pieChart = new Chart(pieCtx, {
-    type: 'doughnut',
-    data: {
-      labels: ['Color','Shape','Temperature'],
-      datasets: [{
-        data: [33,33,34],
-        backgroundColor: ['#f7d36b','#bfe44a','#ffd89b'],
-        borderWidth: 0
-      }]
-    },
-    options: {
-      responsive: true,
-      maintainAspectRatio: false,
-      cutout: '55%',
-      plugins: { legend: { position: 'bottom' } }
+    <div id="badge" class="badge">--</div>
+    <p id="comment" style="font-size: 18px;"></p>
+  </div>
+
+  <div id="chartContainer">
+    <canvas id="readingsChart"></canvas>
+  </div>
+
+  <div id="summary">
+    <h3>Experiment Summary</h3>
+    <p id="summaryText">Press any button to start the experiment and view conclusions here.</p>
+  </div>
+
+  <script>
+    let chart;
+
+    function updateBadge(badge, color, comment) {
+      const badgeDiv = document.getElementById("badge");
+      badgeDiv.innerHTML = badge;
+      badgeDiv.style.backgroundColor = color;
+      document.getElementById("comment").innerHTML = comment;
     }
-  });
 
-  // initial empty line
-  const lineCtx = document.getElementById('lineChart').getContext('2d');
-  lineChart = new Chart(lineCtx, {
-    type: 'line',
-    data: {
-      labels: ['1','2','3','4','5'],
-      datasets: [{
-        label: 'Distance (cm)',
-        data: [0,0,0,0,0],
-        fill: true,
-        tension: 0.35,
-        pointRadius: 6,
-        backgroundColor: 'rgba(183,217,74,0.18)',
-        borderColor: '#9bd55a'
-      }]
-    },
-    options: {
-      responsive: true,
-      maintainAspectRatio: false,
-      scales: {
-        y: { beginAtZero: true }
-      }
+    function updateChart(data) {
+      const ctx = document.getElementById('readingsChart').getContext('2d');
+      if (chart) chart.destroy();
+      chart = new Chart(ctx, {
+        type: 'line',
+        data: {
+          labels: data.map((_, i) => i + 1),
+          datasets: [{
+            label: 'Distance Readings (cm)',
+            data: data,
+            borderColor: 'black',
+            backgroundColor: 'white',
+            borderWidth: 2,
+            pointRadius: 3,
+            fill: false
+          }]
+        },
+        options: {
+          responsive: true,
+          plugins: { legend: { labels: { color: 'black' } } },
+          scales: {
+            x: { ticks: { color: 'black' } },
+            y: { ticks: { color: 'black' } }
+          }
+        }
+      });
     }
-  });
 
-  // UI helpers
-  function setStatus(msg, isError=false) {
-    const s = document.getElementById('status');
-    s.innerText = msg;
-    s.style.color = isError ? '#cc3333' : '#666';
-  }
-
-  function disableBtns(v) {
-    document.getElementById('btnDistance').disabled = v;
-    document.getElementById('btnShape').disabled = v;
-  }
-
-  // endpoints
-  async function doMeasure() {
-    setStatus('Measuring...');
-    disableBtns(true);
-    try {
-      const res = await fetch('/measure');
-      if (!res.ok) throw new Error('Server error');
-      const data = await res.json();
-      document.getElementById('distanceVal').innerText = (data.distance >= 0 ? data.distance + ' cm' : '-- cm');
-      document.getElementById('tempVal').innerText = 'Temp: ' + (data.temperature !== null ? data.temperature + ' °C' : '--') + ' | Color: ' + (data.color || '--');
-      // update small metrics and pie
-      updatePerformance(data);
-      setStatus('Measurement complete');
-    } catch (err) {
-      setStatus('Error: ' + err.message, true);
-    } finally {
-      disableBtns(false);
+    function updateSummary() {
+      fetch("/summary")
+        .then(res => res.json())
+        .then(data => {
+          document.getElementById("summaryText").innerHTML = data.summary;
+        });
     }
-  }
 
-  async function doShape() {
-    setStatus('Taking 5 readings...');
-    disableBtns(true);
-    try {
-      const res = await fetch('/check_shape');
-      if (!res.ok) throw new Error('Server error');
-      const d = await res.json();
-      // update main distance (average)
-      document.getElementById('distanceVal').innerText = d.average + ' cm';
-      document.getElementById('shapeVal').innerText = d.shape || '--';
-      document.getElementById('colorVal').innerText = d.color || '--';
-      document.getElementById('tempSmall').innerText = d.temperature !== null ? d.temperature + ' °C' : '--';
-
-      // update line chart with the 5 readings
-      const readings = d.distances.map(v => Number(v));
-      lineChart.data.datasets[0].data = readings;
-      lineChart.update();
-
-      // update pie chart with scores
-      const sc = d.scores || {color:33,shape:33,temperature:34};
-      pieChart.data.datasets[0].data = [sc.color, sc.shape, sc.temperature];
-      pieChart.update();
-
-      setStatus('Shape analysis complete: ' + (d.shape || 'Unknown'));
-    } catch (err) {
-      setStatus('Error: ' + err.message, true);
-    } finally {
-      disableBtns(false);
+    function measureDistance() {
+      fetch("/measure_distance")
+        .then(res => res.json())
+        .then(data => {
+          document.getElementById("distance").innerText = data.distance;
+          document.getElementById("temp").innerText = data.temp;
+          document.getElementById("speed").innerText = data.speed;
+          updateBadge(data.badge, data.badgeColor, data.comment);
+          updateSummary();
+        });
     }
-  }
 
-  function updatePerformance(data) {
-    // small update to pie chart: prefer scores if present
-    if (data.scores) {
-      pieChart.data.datasets[0].data = [data.scores.color, data.scores.shape, data.scores.temperature];
-      pieChart.update();
-    } else {
-      // fallback: mark available sensors as high
-      const c = data.color ? 90 : 10;
-      const s = 90;
-      const t = data.temperature !== null ? 90 : 10;
-      pieChart.data.datasets[0].data = [c,s,t];
-      pieChart.update();
+    function checkShape() {
+      fetch("/check_shape")
+        .then(res => res.json())
+        .then(data => {
+          document.getElementById("shape").innerText = data.shape;
+          document.getElementById("std_dev").innerText = data.std_dev;
+          updateChart(data.readings);
+          updateBadge(data.badge, data.badgeColor, data.comment);
+          updateSummary();
+        });
     }
-  }
-</script>
+
+    function checkMaterial() {
+      fetch("/check_material")
+        .then(res => res.json())
+        .then(data => {
+          document.getElementById("material").innerText = data.material;
+          document.getElementById("std_dev").innerText = data.std_dev;
+          updateChart(data.readings);
+          updateBadge(data.badge, data.badgeColor, data.comment);
+          updateSummary();
+        });
+    }
+  </script>
 </body>
 </html>
